Update 015021_Anushka Srivastava_ 1.ipynb

--- a/015021_Anushka Srivastava_ 1.ipynb
+++ b/015021_Anushka Srivastava_ 1.ipynb
@@ -48,7 +48,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "For this assignment \"Attachment_1635667433.csv\" file has been used as the dataset which has been loaded into HDFS(Hadoop Distributed File System).\n",
+    "For this assignment \"Attachment_1635667433.csv\" file is used as the dataset which is loaded into HDFS(Hadoop Distributed File System).\n",
     "The dataset contains below columns:\n",
     "1) Location - Location of the user\n",
     "2) TweetAt - Time of the tweet\n",
