--- a/BDDA_1.ipynb
+++ b/BDDA_1.ipynb
@@ -670,11 +670,11 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "From the above data analysis, trasformation, modelling and performance management we can conclude that \"Logitic Regression Classifier\" is the best suited model for multi-class text classification of the coronavirus tweets in predicting the sentiment categories.\n",
+    "Logitic Regression Classifier" is the best suited model for multi-class text classification of the coronavirus tweets in predicting the sentiment categories.\n",
     "\n",
-    "The accuracy of the model is average because of the sparsity of the feature vectors of the data and the dataset is very small compared to the number of classes it has in the label column and the labels like \"Positive\" and \"Extremely Positive\" and \"Negative\" and \"Extremely Negative\" are having tweets of similair feature values so the models are not able to capture them well to give higher accuracy predictions.\n",
+    " ",
     "\n",
-    "This notebooks concludes that with the NLP concepts, Multi-class classificaiton can be done on raw textual data, better and large data with correct lables can help to get models with high accuracy."
+    ""
    ]
   },
   {
